<resources>
    <!--  Common  -->
    <string name="app_name">Top Trainer</string>

    <!--    Main Activity   -->
    <string name="home_heading1">Trova</string>
    <string name="home_heading2">l\'allenamento</string>
    <string name="home_heading3">migliore</string>
    <string name="home_heading4">per il tuo</string>
    <string name="home_heading5">giocatore</string>
    <string name="button_trova_allenamento">Trova allenamento</string>
    <string name="button_elenco_allenamenti">Ultimi allenamneti</string>
    <string name="text_view_player_name">Nome giocatore</string>

    <!--    Training Activity     -->
    <string name="button_next_label">Avanti</string>
    <string name="button_back_label">Indietro</string>
    <string name="button_allena_label">Allena</string>
    <!-- Strings used for fragments for navigation -->


    <!--  TrainingPlayerDataFragment Fragment  -->
    <string name="heading_player_data_fragment">Dati giocatore</string>
    <string name="info_message_player_data_fragment">Inserisci i dati principali del giocatore per la quale vuoi trovare l\'allenamento migliore. Ricorda che il giocatore può avere al massimo 3 ruoli.</string>
    <string name="label_edit_text_player_name">Nome</string>
    <string name="placeholder_edit_text_player_name">Inserisci nome giocatore</string>
    <string name="placeholder_edit_text_player_age">Inserisci età giocatore</string>
    <string name="label_edit_text_player_age">Età</string>
    <string name="label_select_player_roles">Ruoli</string>

    <!--  TrainingAbility Fragment  -->
    <string name="heading_ability_fragment">Inserisci abilità</string>
    <string name="info_message_ability_fragment">Compila tutte le abilità per procedere alla ricerca dell\'allenamento migliore</string>
    <string name="heading_ability_type_forward">Attacco</string>
    <string name="heading_ability_type_defence">Difesa</string>
    <string name="heading_ability_type_physic">Fisico e Mentale</string>
    <string name="heading_ability_type_gk_1">Portiere 1/2</string>
    <string name="heading_ability_type_gk_2">Portiere 2/2</string>
    <string name="forward_ability_pass">Passaggio</string>
    <string name="forward_ability_dribbling">Dribbling</string>
    <string name="forward_ability_cross">Cross</string>
    <string name="forward_ability_tiro">Tiro</string>
    <string name="forward_ability_fin">Finalizzazione</string>
    <string name="defence_ability_contrasto">Contrasto</string>
    <string name="defence_ability_marcatura">Marcatura</string>
    <string name="defence_ability_pos">Posizionamento</string>
    <string name="defence_ability_colpo_testa">Colpo di Testa</string>
    <string name="defence_ability_coraggio">Coraggio</string>
    <string name="fisico_ability_forma">Forma</string>
    <string name="fisico_ability_forza">Forza</string>
    <string name="fisico_ability_aggr">Aggressività</string>
    <string name="fisico_ability_velocita">Velocità</string>
    <string name="fisico_ability_creativita">Creatività</string>
    <string name="gk_ability_riflessi">Riflessi</string>
    <string name="gk_ability_agilita">Agilità</string>
    <string name="gk_ability_anticipo">Anticipo</string>
    <string name="gk_ability_scatto">Scatto</string>
    <string name="gk_ability_comunicazione">Comunicazione</string>
    <string name="gk_ability_lancio">Lancio</string>
    <string name="gk_ability_calcio">Calcio</string>
    <string name="gk_ability_pugni">Pugni</string>
    <string name="gk_ability_elevazione">Elevazione</string>
    <string name="gk_ability_concentrazione">Concentrazione</string>


    <!--  Result Activity  -->
    <string name="heading_percentage_result_activity">Percentuali %</string>
    <string name="heading_best_training_result_activity">Miglior allenamento</string>
    <string name="info_message_result_percentuali">Di seguito le percentuali totali per tutte le abilità del tuo giocatore e la percentuale delle sole abilità bianche.</string>
    <string name="perc_totale_result_percentuali">Media totale</string>
    <string name="perc_white_result_percentuali">Media abilità bianche</string>
    <string name="best_pgp">Crescita potenziale:</string>
    <string name="info_message_result_miglior_allenamento">Ecco il miglior allenamento da eseguire per il tuo giocatore. Ricorda che il miglior allenamento è calcolato tenendo conto di una sessione di allenamento con tipologia di allenamento uguale per tutti e 6 gli slot.</string>
    <string name="heading_bar_gradient_training_top">Top</string>
    <string name="heading_bar_gradient_training_good">Buono</string>
    <string name="heading_bar_gradient_training_bene">Bene</string>
    <string name="heading_bar_gradient_training_normale">Normale</string>
    <string name="heading_bar_gradient_training_bad">Male</string>
    <string name="heading_bar_gradient_training_worst">N/C</string>
    <string name="button_label_vedi_tutti_allenamenti">Vedi tutti</string>
    <string name="popup_title">Tutti gli esercizi</string>
    <string name="training_name_legend_popup_list">Esercizio</string>
    <string name="training_value_legend_popup_list">CP</string>
    <string name="color_legend_popup_list">Qualità</string>
    <string name="popup_close_button">Chiudi</string>
<!--    <string name="popup_subtitle">Chiudi</string>-->

    <!-- Roles String  -->
    <string name="gk">GK</string>
    <string name="dc">DC</string>
    <string name="dr">DR</string>
    <string name="dl">DL</string>
    <string name="dmc">DMC</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ml">ML</string>
    <string name="amc">AMC</string>
    <string name="aml">AML</string>
    <string name="amr">AMR</string>
    <string name="st">ST</string>


    <!-- -->
</resources>