<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_percentage_result_activity"
            android:theme="@style/Heading_h1"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NormalText"
            android:text="@string/info_message_result_percentuali"
            android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/perc_totale_result_percentuali"
                android:textSize="24dp"/>
            <TextView
                android:id="@+id/total_average"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center"
                android:theme="@style/NormalText"
                android:text="0%"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/perc_white_result_percentuali"
                android:textSize="24dp"/>
            <TextView
                android:id="@+id/white_average"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center"
                android:theme="@style/NormalText"
                android:text="N/C"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_best_training_result_activity"
            android:theme="@style/Heading_h1"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NormalText"
            android:text="@string/info_message_result_miglior_allenamento"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:id="@+id/result_training"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text=""
            android:theme="@style/Heading_h1"
            android:textSize="38dp"
            android:gravity="center"
            android:background="#00cc44"
            android:textColor="#000000"
            android:layout_marginBottom="24dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#00cc44"
                android:text="@string/heading_bar_gradient_training_top"
                android:theme="@style/Heading_h1"
                android:textSize="16dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffff00"
                android:text="@string/heading_bar_gradient_training_good"
                android:theme="@style/Heading_h1"
                android:textSize="16dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ffbf00"
                android:text="@string/heading_bar_gradient_training_normale"
                android:theme="@style/Heading_h1"
                android:textSize="16dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#ff8000"
                android:text="@string/heading_bar_gradient_training_bad"
                android:theme="@style/Heading_h1"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff3300"
                android:gravity="center"
                android:text="@string/heading_bar_gradient_training_worst"
                android:textSize="16dp"
                android:theme="@style/Heading_h1" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>