<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <!-- activity_screen_slide.xml -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/activity_training_buttons"/>


        <LinearLayout
            android:id="@+id/activity_training_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_nav_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_find_training_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="goToPreviousStep"
                    android:text="@string/button_back_label"
                    android:enabled="false"
                    android:layout_marginRight="3dp"
                    android:backgroundTint="@color/button_background_color_next_back"
                    android:theme="@style/ButtonPrimary" />

                <Button
                    android:id="@+id/button_find_training_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="goToNextStep"
                    android:layout_marginLeft="3dp"
                    android:backgroundTint="@color/button_background_color_next_back"
                    android:text="@string/button_next_label"
                    android:theme="@style/ButtonPrimary" />

            </LinearLayout>

            <Button
                android:id="@+id/button_allena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background_color"
                android:enabled="false"
                android:text="@string/button_allena_label"
                android:onClick="goToTraining"
                android:theme="@style/ButtonPrimary"/>

            <Button
                android:id="@+id/button_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_background_color"
                android:enabled="false"
                android:visibility="gone"
                android:text="Test"
                android:theme="@style/ButtonPrimary"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>